git HEAD

    * Remove deprecated webcam scripts (feh-cam and gen-cam-menu)
    * Remove deprecated collage mode (-c/--collage)
    * flip and rotation (keys "<", ">", "|", and "_") no longer change the
      underlying file. This leaves delete ("Ctrl+Delete") as the only
      destructive action which is enabled by default
    * Add option --edit, which makes flip and rotation change the underlying
      file as well as the displayed image. This was the default behaviour in
      feh 1.x and 2.x

Sat, 27 Oct 2018 19:46:48 +0200  Daniel Friesel <derf+feh@finalrewind.org>

* Release v2.28.1
    * Do not ignore quit signals (SIGTERM, SIGINT, SIGQUIT) during preload
    * Add missing EXIF orientations 2, 4, 5, and 7 (when built with exif=1,
      patch by Olof-Joachim Frahm)
    * Improve randomness on non-glibc systems

Mon, 17 Sep 2018 21:17:04 +0200  Daniel Friesel <derf+feh@finalrewind.org>

* Release v2.28
    * Decrease loading time for RAW images by utilizing dcraw to display the
      embedded JPEG preview (patch by <https://github.com/ulteq>)
    * Rename --magick-timeout to --conversion-timeout. --magick-timeout is
      now deprecated and will be removed in a future release
    * Fix unintened aliasing in rotated images whose rotation is not a
      multiple of 90 degrees (patch by <https://github.com/ulteq>)
    * New option: --on-last-slide=hold|quit|resume.
      hold will cause feh to stop advancing beyond the last slide (patch by
      <https://github.com/ulteq>), quit replaces --cycle-once (which is now
      deprecated), and resume is the default (continue at the first image).

Tue, 17 Jul 2018 17:33:10 +0200  Daniel Friesel <derf+feh@finalrewind.org>

* Release v2.27.1
    * Fix feh occasionally becoming unresponsive when asked to terminate
      via SIGINT/SIGQUIT/SIGTERM (based on a patch by
      <https://github.com/giladogit>)
    * Fix --keep-zoom-vp issues introduced in 2.27
      (patch by <https://github.com/ulteq>)
