@@ -403,7 +403,6 @@ static void feh_parse_option_array(int argc, char **argv, int finalrun)
 		{"draw-exif"     , 0, 0, 223},
 		{"auto-rotate"   , 0, 0, 242},
 #endif
-		{"cycle-once"    , 0, 0, 224},
 		{"no-xinerama"   , 0, 0, 225},
 		{"draw-tinted"   , 0, 0, 229},
 		{"info"          , 1, 0, 234},
@@ -742,10 +741,6 @@ static void feh_parse_option_array(int argc, char **argv, int finalrun)
 			opt.auto_rotate = 1;
 			break;
 #endif
-		case 224:
-			weprintf("--cycle-once is deprecated, please use --on-last-slide=quit instead");
-			opt.on_last_slide = ON_LAST_SLIDE_QUIT;
-			break;
 		case 225:
 			opt.xinerama = 0;
 			break;
